Fixed spacing issues for layout

--- a/plugins/knowledge/src/scss/components/_pageHeading.scss
+++ b/plugins/knowledge/src/scss/components/_pageHeading.scss
@@ -11,10 +11,6 @@ $pageHeading-dropdown_width                    : 150px !default;
     display: flex;
     width: 100%;
     align-items: center;
-
-    + .pageMetas {
-        margin-top: $utility-baseUnit * 2;
-    }
 }
 
 .pageTitle {
